@@ -8,5 +8,5 @@ uniform sampler2D texSampler;
 uniform bool useTexture;
 
 void main() {
-    frag_color = useTexture ? (texture2D(texSampler, tex_coord) * color) : vec4(color.xyz, color.w*(0.25f-dot(tex_coord-0.5f, tex_coord-0.5f)));
+    frag_color = useTexture ? (texture2D(texSampler, tex_coord) * color) : vec4(color.xyz, color.w*(1.f-2.f*distance(vec2(0.5, 0.5), tex_coord)));
 }
