@@ -4,6 +4,9 @@
 - Removed multiple extraneous getLocation calls when adding particle data to a float buffer
 - Updated dynamic anchoring to also dynamically update the emitter's axis.
 - Halved maximum simultaneous active dynamic emitters, down to 1024 from 2048
+- Shader now uses SpriteAPI's textureWidth and textureLength, scaling the image up when they are less than 1.
+- Control-flow optimizations
+- Fixed untextured particles' alpha being capped to 0.25.
 
 0.62:
 
